[gd_scene load_steps=4 format=3 uid="uid://b14xfhojfythc"]

[ext_resource type="Script" path="res://Level_Scenes_objects/Main Player/player_scripts/Pause_menu.gd" id="1_58i23"]
[ext_resource type="PackedScene" uid="uid://c7yg0jloj8skr" path="res://MainMenu/Scene_menu/Settings_menu/Options.tscn" id="2_byqv8"]
[ext_resource type="AudioStream" uid="uid://bygwkjdfddqxy" path="res://Sounds/Sounds_Assest/SFX/mouse-click-153941.mp3" id="3_1mmsx"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_58i23")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = 12.0
offset_right = -48.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.878431, 0.87451, 0.941176, 0.329412)

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -86.0
offset_right = 66.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 10

[node name="Label" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Paused "

[node name="Resume" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Resume"

[node name="Setting" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Settings"

[node name="Menu" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Quit to Menu"

[node name="Settings" parent="." instance=ExtResource("2_byqv8")]
visible = false
layout_mode = 1
offset_left = -55.0
offset_top = 13.0
offset_right = -55.0
offset_bottom = 13.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1mmsx")
bus = &"SFX"

[connection signal="pressed" from="ColorRect/GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Menu" to="." method="_on_menu_pressed"]
